task#0: elastic
- added elasticsearch client
- added elasticsearch models ad events
- bug fixes
- updated swagger doc
